Update titles in index.html for clarity and accuracy

--- a/index.html
+++ b/index.html
@@ -696,8 +696,8 @@
         <div class="logo">
           <span>👑</span>
         </div>
-        <h1 class="title">گاه‌شماری شاهنشاهی</h1>
-        <p class="subtitle">Imperial Persian Calendar System</p>
+        <h1 class="title">گاه‌شماری ایرانی</h1>
+        <p class="subtitle">Imperial Calendar System</p>
         <p class="description">
           سیستم پیشرفته تبدیل و نمایش تاریخ بر اساس تقویم شاهنشاهی ایران باستان
         </p>
