--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
     <div class="container">
       <header class="header">
         <div class="logo">
-          <span>👑</span>
+          <img src="iran.svg" alt="Iran Logo" />
         </div>
         <h1 class="title">گاه‌شماری ایرانی</h1>
         <p class="subtitle">Imperial Calendar System</p>
