Update subtitle and description to reflect Persian Calendar System

--- a/index.html
+++ b/index.html
@@ -697,9 +697,9 @@
           <img src="iran.svg" alt="Iran Logo" />
         </div>
         <h1 class="title">گاه‌شماری ایرانی</h1>
-        <p class="subtitle">Imperial Calendar System</p>
+        <p class="subtitle">Persian Calendar System</p>
         <p class="description">
-          سیستم پیشرفته تبدیل و نمایش تاریخ بر اساس تقویم شاهنشاهی ایران باستان
+          سیستم پیشرفته تبدیل و نمایش تاریخ بر اساس انواع سیستم ها
         </p>
       </header>
 
