--- a/index.html
+++ b/index.html
@@ -700,6 +700,9 @@
           <button class="nav-tab" onclick="switchCalendar('gregorian')">
             میلادی
           </button>
+          <button class="nav-tab" onclick="switchCalendar('turkish')">
+            ترکی
+          </button>
           <button class="nav-tab" onclick="switchCalendar('chinese')">
             چینی
           </button>
@@ -785,6 +788,7 @@
               <option value="persian">خورشیدی</option>
               <option value="hijri">هجری قمری</option>
               <option value="gregorian">میلادی</option>
+              <option value="turkish">ترکی</option>
               <option value="chinese">چینی</option>
               <option value="hebrew">عبری</option>
               <option value="unix">یونیکس تایم‌استمپ</option>
@@ -866,6 +870,36 @@
         "December",
       ];
 
+      const turkishMonths = [
+        "Ocak",
+        "Şubat",
+        "Mart",
+        "Nisan",
+        "Mayıs",
+        "Haziran",
+        "Temmuz",
+        "Ağustos",
+        "Eylül",
+        "Ekim",
+        "Kasım",
+        "Aralık",
+      ];
+
+      const turkishMonthsFarsi = [
+        "ژانویه",
+        "فوریه",
+        "مارس",
+        "آپریل",
+        "مه",
+        "ژوئن",
+        "ژوئیه",
+        "اوت",
+        "سپتامبر",
+        "اکتبر",
+        "نوامبر",
+        "دسامبر",
+      ];
+
       const chineseMonths = [
         "ماه اول",
         "ماه دوم",
@@ -917,6 +951,16 @@
         "Friday",
       ];
 
+      const turkishDays = [
+        "Cumartesi",
+        "Pazar",
+        "Pazartesi",
+        "Salı",
+        "Çarşamba",
+        "Perşembe",
+        "Cuma",
+      ];
+
       let currentCalendar = "imperial";
       const IMPERIAL_EPOCH_DIFFERENCE = 1180;
 
@@ -930,6 +974,8 @@
           "تقویم هجری قمری از هجرت محمد از مکه به مدینه (۶۲۲ میلادی) آغاز می‌شود و بر اساس حرکت ماه محاسبه می‌شود.",
         gregorian:
           "تقویم میلادی از تولد مسیح آغاز می‌شود و امروزه رایج‌ترین تقویم جهان است که بر اساس حرکت زمین به دور خورشید محاسبه می‌شود.",
+        turkish:
+          "تقویم ترکی مدرن همان تقویم میلادی است که با نام‌های ماه و روز به زبان ترکی ارائه می‌شود و از سال ۱۹۲۶ در ترکیه استفاده می‌شود.",
         chinese:
           "تقویم چینی یک تقویم قمری-خورشیدی است که بر اساس چرخه‌های ماه و خورشید محاسبه می‌شود و سال‌ها با نام‌های حیوانی و عناصر مشخص می‌شوند.",
         hebrew:
@@ -1156,10 +1202,24 @@
         };
       }
 
+      function gregorianToTurkish(gYear, gMonth, gDay) {
+        return {
+          year: gYear,
+          month: gMonth,
+          day: gDay,
+        };
+      }
+
+      function turkishToGregorian(tYear, tMonth, tDay) {
+        return {
+          year: tYear,
+          month: tMonth,
+          day: tDay,
+        };
+      }
+
       function gregorianToChinese(gYear, gMonth, gDay) {
-        // Approximate Chinese lunar calendar conversion
-        // Using a simplified method based on lunar cycles
-        const lunarEpoch = new Date(-2637, 1, 15); // Approx start of Chinese calendar
+        const lunarEpoch = new Date(-2637, 1, 15);
         const daysSinceEpoch = Math.floor(
           (new Date(gYear, gMonth - 1, gDay) - lunarEpoch) /
             (1000 * 60 * 60 * 24)
@@ -1169,7 +1229,6 @@
         let cMonth = Math.floor(remainingDays / 29.53) + 1;
         let cDay = Math.floor(remainingDays % 29.53) + 1;
 
-        // Stem-branch and zodiac
         const stems = [
           "جیا",
           "یی",
@@ -1226,7 +1285,6 @@
       }
 
       function chineseToGregorian(cYear, cMonth, cDay) {
-        // Approximate reverse conversion
         const lunarEpoch = new Date(-2637, 1, 15);
         const totalDays =
           (cYear - 2637) * 354.367 + (cMonth - 1) * 29.53 + (cDay - 1);
@@ -1241,8 +1299,7 @@
       }
 
       function gregorianToHebrew(gYear, gMonth, gDay) {
-        // Approximate Hebrew calendar conversion
-        const hebrewEpoch = new Date(-3761, 9, 7); // Approx start of Hebrew calendar
+        const hebrewEpoch = new Date(-3761, 9, 7);
         const daysSinceEpoch = Math.floor(
           (new Date(gYear, gMonth - 1, gDay) - hebrewEpoch) /
             (1000 * 60 * 60 * 24)
@@ -1260,7 +1317,6 @@
       }
 
       function hebrewToGregorian(hYear, hMonth, hDay) {
-        // Approximate reverse conversion
         const hebrewEpoch = new Date(-3761, 9, 7);
         const totalDays =
           (hYear - 3761) * 354.367 + (hMonth - 1) * 29.53 + (hDay - 1);
@@ -1301,6 +1357,7 @@
         const pDate = gregorianToPersian(gDate.year, gDate.month, gDate.day);
         const iDate = persianToImperial(pDate.year, pDate.month, pDate.day);
         const hDate = gregorianToHijri(gDate.year, gDate.month, gDate.day);
+        const tDate = gregorianToTurkish(gDate.year, gDate.month, gDate.day);
         const cDate = gregorianToChinese(gDate.year, gDate.month, gDate.day);
         const heDate = gregorianToHebrew(gDate.year, gDate.month, gDate.day);
 
@@ -1309,6 +1366,7 @@
           persian: pDate,
           imperial: iDate,
           hijri: hDate,
+          turkish: tDate,
           chinese: cDate,
           hebrew: heDate,
           unix: { timestampSeconds, timestampMillis },
@@ -1333,12 +1391,18 @@
             ? hebrewMonths
             : calendar === "chinese"
             ? chineseMonths
+            : calendar === "turkish"
+            ? turkishMonths
             : gregorianMonths;
 
         let monthDisplay = months[date.month - 1];
         if (calendar === "gregorian") {
           monthDisplay = `${months[date.month - 1]} (${
             gregorianMonthsEnglish[date.month - 1]
+          })`;
+        } else if (calendar === "turkish") {
+          monthDisplay = `${turkishMonths[date.month - 1]} (${
+            turkishMonthsFarsi[date.month - 1]
           })`;
         }
 
@@ -1352,6 +1416,8 @@
         const dayIndex = now.getDay();
         if (currentCalendar === "gregorian") {
           return `${persianDays[dayIndex]} (${englishDays[dayIndex]})`;
+        } else if (currentCalendar === "turkish") {
+          return `${persianDays[dayIndex]} (${turkishDays[dayIndex]})`;
         }
         return persianDays[dayIndex];
       }
@@ -1380,6 +1446,7 @@
             persian: "تقویم خورشیدی",
             hijri: "تقویم هجری قمری",
             gregorian: "تقویم میلادی",
+            turkish: "تقویم ترکی",
             chinese: "تقویم چینی",
             hebrew: "تقویم عبری",
             unix: "تایم‌استمپ یونیکس",
@@ -1395,6 +1462,7 @@
             persian: "☀️",
             hijri: "🌙",
             gregorian: "🌍",
+            turkish: "🇹🇷",
             chinese: "🐉",
             hebrew: "✡️",
             unix: "⏱️",
@@ -1470,6 +1538,11 @@
             );
             const iDate = persianToImperial(pDate.year, pDate.month, pDate.day);
             const hDate = gregorianToHijri(gDate.year, gDate.month, gDate.day);
+            const tDate = gregorianToTurkish(
+              gDate.year,
+              gDate.month,
+              gDate.day
+            );
             const cDate = gregorianToChinese(
               gDate.year,
               gDate.month,
@@ -1489,6 +1562,7 @@
               persian: pDate,
               imperial: iDate,
               hijri: hDate,
+              turkish: tDate,
               chinese: cDate,
               hebrew: heDate,
             };
@@ -1501,6 +1575,11 @@
               pDate.day
             );
             const hDate = gregorianToHijri(gDate.year, gDate.month, gDate.day);
+            const tDate = gregorianToTurkish(
+              gDate.year,
+              gDate.month,
+              gDate.day
+            );
             const cDate = gregorianToChinese(
               gDate.year,
               gDate.month,
@@ -1521,6 +1600,7 @@
               persian: pDate,
               gregorian: gDate,
               hijri: hDate,
+              turkish: tDate,
               chinese: cDate,
               hebrew: heDate,
               unix: {
@@ -1533,6 +1613,11 @@
             const iDate = persianToImperial(year, month, day);
             const gDate = persianToGregorian(year, month, day);
             const hDate = gregorianToHijri(gDate.year, gDate.month, gDate.day);
+            const tDate = gregorianToTurkish(
+              gDate.year,
+              gDate.month,
+              gDate.day
+            );
             const cDate = gregorianToChinese(
               gDate.year,
               gDate.month,
@@ -1553,6 +1638,7 @@
               imperial: iDate,
               gregorian: gDate,
               hijri: hDate,
+              turkish: tDate,
               chinese: cDate,
               hebrew: heDate,
               unix: {
@@ -1569,6 +1655,11 @@
               gDate.day
             );
             const iDate = persianToImperial(pDate.year, pDate.month, pDate.day);
+            const tDate = gregorianToTurkish(
+              gDate.year,
+              gDate.month,
+              gDate.day
+            );
             const cDate = gregorianToChinese(
               gDate.year,
               gDate.month,
@@ -1589,6 +1680,45 @@
               gregorian: gDate,
               persian: pDate,
               imperial: iDate,
+              turkish: tDate,
+              chinese: cDate,
+              hebrew: heDate,
+              unix: {
+                timestampSeconds: unixTimestamp,
+                timestampMillis: unixTimestamp * 1000,
+              },
+            };
+            gregorianDate = gDate;
+          } else if (inputCalendar === "turkish") {
+            const gDate = turkishToGregorian(year, month, day);
+            const pDate = gregorianToPersian(
+              gDate.year,
+              gDate.month,
+              gDate.day
+            );
+            const iDate = persianToImperial(pDate.year, pDate.month, pDate.day);
+            const hDate = gregorianToHijri(gDate.year, gDate.month, gDate.day);
+            const cDate = gregorianToChinese(
+              gDate.year,
+              gDate.month,
+              gDate.day
+            );
+            const heDate = gregorianToHebrew(
+              gDate.year,
+              gDate.month,
+              gDate.day
+            );
+            const unixTimestamp = gregorianToUnix(
+              gDate.year,
+              gDate.month,
+              gDate.day
+            );
+            results = {
+              turkish: { year, month, day },
+              gregorian: gDate,
+              persian: pDate,
+              imperial: iDate,
+              hijri: hDate,
               chinese: cDate,
               hebrew: heDate,
               unix: {
@@ -1606,6 +1736,11 @@
             );
             const iDate = persianToImperial(pDate.year, pDate.month, pDate.day);
             const hDate = gregorianToHijri(gDate.year, gDate.month, gDate.day);
+            const tDate = gregorianToTurkish(
+              gDate.year,
+              gDate.month,
+              gDate.day
+            );
             const heDate = gregorianToHebrew(
               gDate.year,
               gDate.month,
@@ -1627,6 +1762,7 @@
               persian: pDate,
               imperial: iDate,
               hijri: hDate,
+              turkish: tDate,
               hebrew: heDate,
               unix: {
                 timestampSeconds: unixTimestamp,
@@ -1643,6 +1779,11 @@
             );
             const iDate = persianToImperial(pDate.year, pDate.month, pDate.day);
             const hDate = gregorianToHijri(gDate.year, gDate.month, gDate.day);
+            const tDate = gregorianToTurkish(
+              gDate.year,
+              gDate.month,
+              gDate.day
+            );
             const cDate = gregorianToChinese(
               gDate.year,
               gDate.month,
@@ -1659,6 +1800,7 @@
               persian: pDate,
               imperial: iDate,
               hijri: hDate,
+              turkish: tDate,
               chinese: cDate,
               unix: {
                 timestampSeconds: unixTimestamp,
@@ -1670,6 +1812,7 @@
             const pDate = gregorianToPersian(year, month, day);
             const iDate = persianToImperial(pDate.year, pDate.month, pDate.day);
             const hDate = gregorianToHijri(year, month, day);
+            const tDate = gregorianToTurkish(year, month, day);
             const cDate = gregorianToChinese(year, month, day);
             const heDate = gregorianToHebrew(year, month, day);
             const unixTimestamp = gregorianToUnix(year, month, day);
@@ -1678,6 +1821,7 @@
               persian: pDate,
               imperial: iDate,
               hijri: hDate,
+              turkish: tDate,
               chinese: cDate,
               hebrew: heDate,
               unix: {
@@ -1705,6 +1849,7 @@
           persian: "خورشیدی",
           hijri: "هجری قمری",
           gregorian: "میلادی",
+          turkish: "ترکی",
           chinese: "چینی",
           hebrew: "عبری",
           unix: "یونیکس تایم‌استمپ",
